Rewrite task 25